--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Koa 'Hello World' middleware, useful for testing",
   "repository": "tunnckoCore/koa-hello-world",
   "author": "Charlike Mike Reagent <@tunnckoCore> (http://www.tunnckocore.tk)",
-  "main": "index.js",
+  "main": "app.js",
   "license": "MIT",
   "scripts": {
-    "test": "standard && node test.js"
+    "test": "standard && node test.js",
+    "start": "node app.js"
   },
   "dependencies": {},
   "devDependencies": {
